# RustPlayground

./: .dockerignore  Cargo.toml
src/: main.rs
src/routes/: mod.rs
src/routes/api/: mod.rs  users.rs
static/: index.html
