[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Tobias Elod-Zoltan <tobias.elod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-web-httpauth = "0.4.1"
bson = "0.14"
futures = "0.3.4"
jsonwebtoken = "7.1.0"
mongodb = "0.9.2"
pbkdf2 = "0.3.0"
regex = "1.3.7"
serde = "1.0.106"
serde_json = "1.0.51"
validator = "0.10.0"
validator_derive = "0.10"
